--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>extnd demo</title>
-	<script src="extnd.js"></script>
+	<script src="extnd.min.js"></script>
 </head>
 <body>
 
@@ -30,7 +30,7 @@
 		init: function(name) {
 			this._super.apply(this, arguments);
 			console.log('Hummingbirds have', this.wings);
-			console.log('Hummingbirds is', this.getAge());
+			console.log('Hummingbirds are', this.getAge());
 		}
 	});
 
