Including existing js instead of non-existant minified one

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>extnd demo</title>
-	<script src="extnd.min.js"></script>
+	<script src="extnd.js"></script>
 </head>
 <body>
 
